[tool.poetry]
name = "JianshuMicroFeatures"
version = "2.6.1"
description = "为简友提供高效便捷的科技工具"
authors = ["FHU-yezi <yehaowei20060411@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pywebio = "^1.6.2"
JianshuResearchTools = "2.10.1"
jieba = "^0.42.1"
qrcode = "^7.3.1"
pyecharts = "^1.9.1"
PyYAML = "^6.0"
tomd = "^0.1.3"
Pillow = "^9.2.0"
pymongo = "^4.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.0"
mypy = "^0.991"
types-PyYAML = "^6.0.11"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
