[tool.poetry]
name = "JianshuMicroFeatures"
version = "2.9.0"
description = "为简友提供高效便捷的科技工具"
authors = ["FHU-yezi <yehaowei20060411@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pywebio = "^1.8.0"
JianshuResearchTools = "2.11.0"
qrcode = "^7.3.1"
pyecharts = "^2.0.0"
PyYAML = "^6.0"
tomd = "^0.1.3"
Pillow = "^9.2.0"
pymongo = "^4.2.0"
sspeedup = {version = "^0.9.0", extras = ["logging", "pywebio", "qrcode", "ability-word-split"]}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.262"
pyright = "^1.1.292"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

select = ["A", "ANN", "B", "C", "E", "F", "I", "N", "RET", "S", "SIM", "UP", "W"]

ignore = ["ANN101", "ANN102", "ANN401", "C901", "E501", "S104"]

target-version = "py38"