[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
motor = "^3.4.0"
sspeedup = {version = "^0.25.0", extras = ["logging", "config", "api-litestar"]}
uvicorn = "^0.30.0"
httptools = "^0.6.0"
uvloop = "^0.19.0"
jkit = "^3.0.0a16"
sshared = "^0.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
pyright = "^1.1.0"
watchfiles = "^0.22.0"

[tool.ruff]

target-version = "py38"

lint.select = [
    "A", "ANN", "ARG", "ASYNC", "B",
    "BLE", "C4", "E", "F", "I",
    "ICN", "ISC", "N", "PERF", "PIE",
    "PT", "Q", "RET", "RSE", "RUF",
    "S", "SIM", "SLOT", "TCH", "UP",
    "W"
]
lint.ignore = ["ANN101", "ANN102", "ISC001", "RUF001", "RUF002", "RUF003"]