[project]
name = "jtools"
version = "3.14.0"
description = "探索未知"
license = {file = "LICENSE"}
authors = [
  {name = "FHU-yezi", email = "yehaowei20060411@qq.com"},
]
requires-python = ">=3.9"
dependencies = [
    "httptools>=0.6.0",
    "jkit>=3.0.0a16",
    "motor>=3.6.0",
    "psycopg[binary]>=3.2.0",
    "sshared>=0.15.0",
    "sspeedup[api-litestar,config,logging]>=0.25.0",
    "uvicorn>=0.32.0",
    "uvloop>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py39"
lint.select = [
    "A", "ANN", "ARG", "ASYNC", "B",
    "BLE", "C4", "E", "F", "I",
    "ICN", "ISC", "N", "PERF", "PIE",
    "PT", "Q", "RET", "RSE", "RUF",
    "S", "SIM", "SLOT", "TCH", "UP",
    "W"
]
lint.ignore = ["ANN101", "ANN102", "ISC001", "RUF001", "RUF002", "RUF003"]
