[project]
name = "jtools"
version = "3.19.0"
description = "探索未知"
license = { file = "LICENSE" }
authors = [{ name = "FHU-yezi", email = "yehaowei20060411@qq.com" }]
requires-python = ">=3.9"
dependencies = [
    "httptools>=0.6.0",
    "jkit>=3.0.0a16",
    "psycopg[binary]>=3.2.0",
    "sshared[config, postgres]>=0.18.0",
    "sspeedup[api-litestar]>=0.25.0",
    "uvicorn>=0.32.0",
    "uvloop>=0.21.0",
]

[tool.uv]
dev-dependencies = ["pyright>=1.1.0", "ruff>=0.8.0", "watchfiles>=0.24.0"]

[tool.ruff]
target-version = "py39"
lint.select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "E",
    "F",
    "FA",
    "FBT",
    "FURB",
    "I",
    "ISC",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T20",
    "TID",
    "TRY",
    "UP",
    "W",
]
lint.ignore = [
    "ISC001",
    "PERF203",
    "RUF001",
    "RUF002",
    "RUF003",
    "S311",
    "TRY003",
]
